--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ajaykumar-1201.github.io/your-sign-up-form",
+  "homepage": "https://ajaykumar-1201.github.io/sign-up-form",
   "name": "sign-up-form",
   "version": "0.1.0",
   "private": true,
